--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -132,16 +132,10 @@ jobs:
           project_id: ${{ secrets.STAGING_GCLOUD_PROJECT }}
           service_account_key: ${{ secrets.STAGING_GCLOUD_SA_KEY }}
           export_default_credentials: true
-      - name: Double Deploy and Double Withdraw
+      - name: Deploy and Withdraw
         run: |
           status=0
           declare -a args=("kernelci-staging" "gh_run_${{ github.run_id }}")
-          echo "FIRST DEPLOYMENT" >&2
           ./cloud deploy "${args[@]}" --verbose --smtp-password-file=<(echo foobar) || status=$((status || $?))
-          echo "SECOND DEPLOYMENT" >&2
-          ./cloud deploy "${args[@]}" --verbose || status=$((status || $?))
-          echo "FIRST WITHDRAWAL" >&2
-          ./cloud withdraw "${args[@]}" --verbose || status=$((status || $?))
-          echo "SECOND WITHDRAWAL" >&2
           ./cloud withdraw "${args[@]}" --verbose || status=$((status || $?))
           exit "$status"
