Support diverting emails to a PubSub topic
Add support for diverting generated notification emails to a PubSub
topic instead of the SMTP server. To be used in deployment tests.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -135,7 +135,9 @@ jobs:
       - name: Deploy, Test, and Withdraw
         run: |
           status=0
-          declare -a args=("kernelci-staging" "gh_run_${{ github.run_id }}")
+          declare -a args=(
+            "kernelci-staging" "gh_run_${{ github.run_id }}" --smtp-mocked
+          )
           declare -a env_args=("${args[@]}" --heavy-asserts)
           env=$(./cloud env --format=sh "${env_args[@]}")
 
