Actions: Only check deployment if Python tests passed
To reduce time to CI completion and to reduce cloud load/billing, only
run deployment tests after Python tests have passed.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,6 +93,7 @@ jobs:
         run: kcidb-tests-validate --urls < tests.yaml
 
   check_deployment:
+    needs: check_python
     runs-on: ubuntu-latest
     steps:
       - name: Check credentials
