--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ jinja2
 python-dateutil
 cached-property
 jq@git+https://github.com/kernelci/jq.py.git@1.2.1.post1
-kcidb-io@git+https://github.com/kernelci/kcidb-io.git@v4_pre1
+kcidb-io@git+https://github.com/kernelci/kcidb-io.git
